Refactoring Boundaries-behaviour
