# spec/swagger.yaml
@@ -18,7 +18,9 @@ tags:
   - name: "calculation"
     description: "Everything to calculate a ModflowModel"
   - name: "modflowmodel"
-    description: "Everything to build a ModflowModel (T03)"
+    description: "Tool T03, setup model"
+  - name: "boundaries"
+    description: "Tool T03, specify boundaries"
   - name: "tool"
     description: "Project-specific"
   - name: "soilmodel"
@@ -561,7 +563,7 @@ paths:
         - "modflowmodel"
       summary: "Updates the modflowmodel in one call"
       description: "Updates the modflowmodel-details in one call, parameter are not obligatory"
-      operationId: "updateModflowModel"
+      operationId: "deleteModflowModel"
       consumes:
         - "application/json"
       parameters:
@@ -658,7 +660,7 @@ paths:
   /modflowmodels/{id}/boundaries:
     get:
       tags:
-        - "modflowmodel"
+        - "boundaries"
       summary: "Get boundary-list from model by ID"
       description: "Returns a list of all boundaries with ids, types, names, geometry"
       operationId: "getModflowModelBoundaryList"
@@ -681,7 +683,7 @@ paths:
         - api_key: []
     post:
       tags:
-        - "modflowmodel"
+        - "boundaries"
       summary: "Add a boundary with metadata to modflowmodel by id"
       description: "Adds a boundary with name, type, geometry, affected layers to a modflowmodel"
       operationId: "addModflowModelBoundary"
@@ -715,7 +717,7 @@ paths:
   /modflowmodels/{id}/boundaries/{bid}:
     get:
       tags:
-        - "modflowmodel"
+        - "boundaries"
       summary: "Get boundary by modelId and BoundaryId"
       description: "Returns all details of a boundary with id, type, name, geometry, metadata, observationpoints and observationPointValues"
       operationId: "getModflowModelBoundary"
@@ -743,7 +745,7 @@ paths:
         - api_key: []
     put:
       tags:
-        - "modflowmodel"
+        - "boundaries"
       summary: "Update boundary details"
       description: "Update boundary details"
       operationId: "updateModflowModelBoundary"
@@ -776,209 +778,10 @@ paths:
       security:
         - api_key: []
 
-  /modflowmodels/{id}/boundaries/{bid}/activecells:
-    get:
-      tags:
-        - "modflowmodel"
-      summary: "Get activeCells by modelId and BoundaryId"
-      description: "Returns the activeCells"
-      operationId: "getModflowModelBoundaryActiveCells"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-      responses:
-        '200':
-          description: "successful operation"
-          schema:
-            type: "object"
-            properties:
-              active_cells:
-                $ref: '#/definitions/ActiveCellsWithCellValues'
-        '404':
-          description: "Boundary not found"
-      security:
-        - api_key: []
-    put:
-      tags:
-        - "modflowmodel"
-      summary: "Update activeCells with modflowModelId and boundaryId"
-      description: "Updates the activeCells of a boundary."
-      operationId: "updateModflowModelBoundaryActiveCells"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - in: "body"
-          name: "body"
-          description: "Boundary activeCells"
-          required: true
-          schema:
-            type: "object"
-            properties:
-              active_cells:
-                $ref: '#/definitions/ActiveCellsWithCellValues'
-      responses:
-        '302':
-          description: "Redirect response"
-          headers:
-            Location:
-              type: "string"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-
-  /modflowmodels/{id}/boundaries/{bid}/affectedlayers:
-    put:
-      tags:
-        - "modflowmodel"
-      summary: "Update affectedLayers with modflowModelId and boundaryId"
-      description: "Updates the affectedLayers of a boundary."
-      operationId: "updateModflowModelBoundaryAffectedLayers"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - in: "body"
-          name: "body"
-          description: "Boundary affectedLayers"
-          required: true
-          schema:
-            type: "object"
-            properties:
-              affected_layers:
-                $ref: '#/definitions/AffectedLayers'
-      responses:
-        '302':
-          description: "Redirect to GET /modflowmodels/{id}/boundaries/{bid}"
-          headers:
-            Location:
-              type: "string"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-
-  /modflowmodels/{id}/boundaries/{bid}/geometry:
-    put:
-      tags:
-        - "modflowmodel"
-      summary: "Update boundaryGeometry with modflowModelId and boundaryId"
-      description: "Update boundaryGeometry with modflowModelId and boundaryId."
-      operationId: "updateModflowModelBoundaryGeometry"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - in: "body"
-          name: "body"
-          description: "Boundary geometry"
-          required: true
-          schema:
-            type: "object"
-            properties:
-              geometry:
-                $ref: '#/definitions/Geometry'
-      responses:
-        '302':
-          description: "Redirect to GET /modflowmodels/{id}/boundaries/{bid}"
-          headers:
-            Location:
-              type: "string"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-
-  /modflowmodels/{id}/boundaries/{bid}/name:
-    put:
-      tags:
-        - "modflowmodel"
-      summary: "Update boundaryGeometry with modflowModelId and boundaryId"
-      description: "Updates the name of a boundary."
-      operationId: "updateModflowModelBoundaryName"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - in: "body"
-          name: "body"
-          description: "Boundary geometry"
-          required: true
-          schema:
-            type: "object"
-            properties:
-              name:
-                $ref: '#/definitions/BoundaryName'
-      responses:
-        '302':
-          description: "Redirect to GET /modflowmodels/{id}/boundaries/{bid}"
-          headers:
-            Location:
-              type: "string"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-
   /modflowmodels/{id}/boundaries/{bid}/observationpoints:
     post:
       tags:
-        - "modflowmodel"
+        - "boundaries"
       summary: "Creates a new observationPoint"
       description: "Creates a new observationPoint."
       operationId: "addObservationPointToBoundary"
@@ -1024,9 +827,9 @@ paths:
   /modflowmodels/{id}/boundaries/{bid}/observationpoints/{oid}:
     get:
       tags:
-        - "modflowmodel"
-      summary: "Get observationpoint details with modelId, BoundaryId and observationPointId."
-      description: "Returns observationpoints and observationPointValues"
+        - "boundaries"
+      summary: "Get observationpoint details."
+      description: "Returns observationpoint details"
       operationId: "getModflowModelBoundaryObservationPoint"
       produces:
         - "application/json"
@@ -1046,10 +849,61 @@ paths:
           description: "ID of ModflowModelBoundaryObservationpoint"
           required: true
           type: "string"
+      responses:
+        '200':
+          description: "successful operation"
+          schema:
+            $ref: '#/definitions/ModflowModelBoundaryObservationPoint'
+        '404':
+          description: "Boundary not found"
+      security:
+        - api_key: []
+    put:
+      tags:
+        - "boundaries"
+      summary: "Update observationpoint details."
+      description: "Updates the observationpoint details"
+      operationId: "putModflowModelBoundaryObservationPointName"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of ModflowModel"
+          required: true
+          type: "string"
+        - name: "bid"
+          in: "path"
+          description: "ID of ModflowModelBoundary"
+          required: true
+          type: "string"
+        - name: "oid"
+          in: "path"
+          description: "ID of ModflowModelBoundaryObservationpoint"
+          required: true
+          type: "string"
+        - in: "body"
+          name: "body"
+          description: "ObservationPointDetails"
+          required: true
+          schema:
+            $ref: '#/definitions/ModflowModelBoundaryObservationPointPutDetails'
+      responses:
+        '302':
+          description: "Redirect response to GET /modflowmodels/{id}/boundaries/{bid}/observationpoints/{oid}"
+          headers:
+            Location:
+              type: "string"
+        '422':
+          description: "Invalid input"
+      security:
+        - api_key: []
     delete:
       tags:
-        - "modflowmodel"
-      summary: "Delete observationpoint from boundary."
+        - "boundaries"
+      summary: "Delete observationpoint."
       description: "Delete observationpoint from boundary."
       operationId: "deleteModflowModelBoundaryObservationPoint"
       produces:
@@ -1075,243 +929,6 @@ paths:
           description: "Successful operation"
         '404':
           description: "Not found"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-
-  /modflowmodels/{id}/boundaries/{bid}/observationpoints/{oid}/name:
-    get:
-      tags:
-        - "modflowmodel"
-      summary: "Get observationPointName."
-      description: "Returns observationPointName"
-      operationId: "getModflowModelBoundaryObservationPointName"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - name: "oid"
-          in: "path"
-          description: "ID of ModflowModelBoundaryObservationpoint"
-          required: true
-          type: "string"
-      responses:
-        '200':
-          description: "successful operation"
-          schema:
-            $ref: '#/definitions/ObservationPointName'
-        '404':
-          description: "Not found"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-    put:
-      tags:
-        - "modflowmodel"
-      summary: "Update observationpointName."
-      description: "Updates the observationpointName"
-      operationId: "putModflowModelBoundaryObservationPointName"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - name: "oid"
-          in: "path"
-          description: "ID of ModflowModelBoundaryObservationpoint"
-          required: true
-          type: "string"
-        - in: "body"
-          name: "body"
-          description: "Boundary that needs to be added"
-          required: true
-          schema:
-            $ref: '#/definitions/ObservationPointName'
-      responses:
-        '302':
-          description: "Redirect response"
-          headers:
-            Location:
-              type: "string"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-
-  /modflowmodels/{id}/boundaries/{bid}/observationpoints/{oid}/geometry:
-    get:
-      tags:
-        - "modflowmodel"
-      summary: "Get observationPointName."
-      description: "Returns observationPointName"
-      operationId: "getModflowModelBoundaryObservationPointGeometry"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - name: "oid"
-          in: "path"
-          description: "ID of ModflowModelBoundaryObservationpoint"
-          required: true
-          type: "string"
-      responses:
-        '200':
-          description: "successful operation"
-          schema:
-            $ref: '#/definitions/PointGeometry'
-        '404':
-          description: "Not found"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-    put:
-      tags:
-        - "modflowmodel"
-      summary: "Update observationpointName."
-      description: "Updates the observationpointName"
-      operationId: "putModflowModelBoundaryObservationPointGeometry"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - name: "oid"
-          in: "path"
-          description: "ID of ModflowModelBoundaryObservationpoint"
-          required: true
-          type: "string"
-        - in: "body"
-          name: "body"
-          description: "Boundary that needs to be added"
-          required: true
-          schema:
-            $ref: '#/definitions/PointGeometry'
-      responses:
-        '302':
-          description: "Redirect response"
-          headers:
-            Location:
-              type: "string"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-
-  /modflowmodels/{id}/boundaries/{bid}/observationpoints/{oid}/values:
-    get:
-      tags:
-        - "modflowmodel"
-      summary: "Get observationPointName."
-      description: "Returns observationPointName"
-      operationId: "getModflowModelBoundaryObservationPointValues"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - name: "oid"
-          in: "path"
-          description: "ID of ModflowModelBoundaryObservationpoint"
-          required: true
-          type: "string"
-      responses:
-        '200':
-          description: "successful operation"
-          schema:
-            $ref: '#/definitions/ObservationPointValuesWithDescription'
-        '404':
-          description: "Not found"
-        '422':
-          description: "Invalid input"
-      security:
-        - api_key: []
-    put:
-      tags:
-        - "modflowmodel"
-      summary: "Update observationpointName."
-      description: "Updates the observationpointName"
-      operationId: "putModflowModelBoundaryObservationPointValues"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "ID of ModflowModel"
-          required: true
-          type: "string"
-        - name: "bid"
-          in: "path"
-          description: "ID of ModflowModelBoundary"
-          required: true
-          type: "string"
-        - name: "oid"
-          in: "path"
-          description: "ID of ModflowModelBoundaryObservationpoint"
-          required: true
-          type: "string"
-        - in: "body"
-          name: "body"
-          description: "Boundary that needs to be added"
-          required: true
-          schema:
-            $ref: '#/definitions/ObservationPointValues'
-      responses:
-        '302':
-          description: "Redirect response"
-          headers:
-            Location:
-              type: "string"
         '422':
           description: "Invalid input"
       security:
@@ -3049,6 +2666,8 @@ definitions:
         $ref: '#/definitions/BoundaryType'
       geometry:
         $ref: '#/definitions/Geometry'
+      active_cells:
+        $ref: '#/definitions/BoundaryActiveCells'
       affected_layers:
         $ref: '#/definitions/AffectedLayers'
       metadata:
@@ -3066,6 +2685,8 @@ definitions:
         example: "Well 123"
       geometry:
         $ref: '#/definitions/Geometry'
+      active_cells:
+        $ref: '#/definitions/BoundaryActiveCells'
       affected_layers:
         $ref: '#/definitions/AffectedLayers'
       metadata:
@@ -3084,6 +2705,17 @@ definitions:
         $ref: "#/definitions/PointGeometry"
       values_description:
         $ref: '#/definitions/ObservationPointValuesDescription'
+      values:
+        $ref: '#/definitions/ObservationPointValues'
+  ModflowModelBoundaryObservationPointPutDetails:
+    title: "ModflowModelBoundaryObservationPoint"
+    type: "object"
+    properties:
+      name:
+        type: "string"
+        example: "RH 48"
+      geometry:
+        $ref: "#/definitions/PointGeometry"
       values:
         $ref: '#/definitions/ObservationPointValues'
   ToolListItem:
@@ -3431,6 +3063,20 @@ definitions:
           - [ false, true, true, true, false ]
           - [ false, true, true, true, false ]
           - [ false, true, true, true, false ]
+  BoundaryActiveCells:
+    title: "BoundaryActiveCells"
+    type: "array"
+    items:
+      type: "array"
+      items:
+        type: "number"
+    example:
+      - [0, 1, 3]
+      - [0, 1, 4]
+      - [0, 1, 5]
+      - [0, 1, 6]
+      - [0, 1, 7]
+
   ActiveCellsWithCellValues:
     title: "ActiveCellsWithCellValues"
     type: "array"
